cmake_minimum_required(VERSION 3.1)

project(mc_talos)

set(CMAKE_CXX_STANDARD 11)
option(USE_CONFIDENTIAL_TALOS "Use the confidential model talos_data" ON)

find_package(mc_rtc REQUIRED)

# Compute the relative path to talos_data **before** calling find_package
set(TALOS_DATA_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../talos_data")
if(EXISTS "${TALOS_DATA_PATH}")
  set(talos_data_SOURCE_PREFIX "${TALOS_DATA_PATH}")
  set(talos_data_INSTALL_PREFIX "${TALOS_DATA_PATH}")
  message(STATUS "Using talos_data from ${talos_data_SOURCE_PREFIX}")
endif()

set(talos_data_SOURCE_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/../talos_data")
find_package(talos_data REQUIRED)

if(${USE_CONFIDENTIAL_TALOS})
  message("-- Using TALOS confidential model")
  if("${talos_data_INSTALL_PREFIX}" STREQUAL "")
    if("${talos_data_SOURCE_PREFIX}" STREQUAL "")
      message(FATAL_ERROR "Your talos_data package does not define where to find the data")
    endif()
    set(TALOS_DESCRIPTION_PATH "${talos_data_SOURCE_PREFIX}")
  else()
    set(TALOS_DESCRIPTION_PATH "${talos_data_INSTALL_PREFIX}")
  endif()
else()
  message("-- Using HRP4C simplified model")
  if(${talos_data_FOUND})
    if("${talos_data_INSTALL_PREFIX}" STREQUAL "")
      if("${talos_data_SOURCE_PREFIX}" STREQUAL "")
        message(FATAL_ERROR "Your talos_data package does not define where to find the data")
      endif()
      set(TALOS_DESCRIPTION_PATH "${talos_data_SOURCE_PREFIX}")
    else()
      set(TALOS_DESCRIPTION_PATH "${talos_data_INSTALL_PREFIX}")
    endif()
  endif()
endif()

message("-- TALOS_DESCRIPTION_PATH: ${TALOS_DESCRIPTION_PATH}")
configure_file(src/config.h.in "${CMAKE_CURRENT_BINARY_DIR}/include/config.h")

add_robot(talos src/talos.cpp src/talos.h)
target_include_directories(talos PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/include")

option(DISABLE_TESTS "Disable unit tests" OFF)
if(NOT ${DISABLE_TESTS})
  enable_testing()
  add_subdirectory(tests)
endif()
